--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -1,1 +1,5 @@
-$font-family-sans-serif: "Open Sans", "Helvetica", sans-serif;
+$font-family-sans-serif: 'Roboto', 'Helvetica', sans-serif;
+$headings-font-family: 'KievitPro', 'Helvetica', sans-serif;
+$font-weight-base: 300;
+$headings-font-weight: 800;
+$h1-font-size: 3rem;
