--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,6 @@
-@import "vars";
-@import "fonts";
-@import "../../node_modules/bootstrap/scss/bootstrap";
-@import "global";
+@import 'vars';
+@import 'fonts';
+@import '../../node_modules/bootstrap/scss/bootstrap';
+@import 'helpers/fs';
+@import 'helpers/helpers';
+@import 'global';
