breadcrumb, subscribe, footer

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,7 @@
 @import 'helpers/fs';
 @import 'helpers/helpers';
 @import 'global';
+@import 'blocks/breadcrumb';
+@import 'blocks/delivery';
+@import 'blocks/footer';
+@import 'blocks/subscribe';
