--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -49,8 +49,15 @@ $border-color: #f0f0f0;
 
 $input-btn-font-size: 0.875rem;
 $input-btn-padding-y: 0.5rem;
-$btn-border-radius: 20px;
-$input-border-radius: 20px;
+$input-btn-padding-x-sm: 1rem;
+$input-btn-font-size-sm: 0.75rem;
+$input-btn-border-radius: 20px;
+
+$input-border-radius: $input-btn-border-radius;
+$input-border-radius-sm: $input-btn-border-radius;
+
+$btn-border-radius: $input-btn-border-radius;
+$btn-border-radius-sm: $input-btn-border-radius;
 
 $breadcrumb-font-size: 12px;
 $breadcrumb-padding-y: 1rem;
