--- a/source/sass/helpers/helpers.scss
+++ b/source/sass/helpers/helpers.scss
@@ -5,3 +5,9 @@
 .border-4 {
   border-width: 4px !important;
 }
+
+.btn-unstyled {
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
