--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,10 @@
 @import 'helpers/helpers';
 @import 'global';
 @import 'blocks/breadcrumb';
+@import 'blocks/cart-link';
 @import 'blocks/delivery';
 @import 'blocks/footer';
+@import 'blocks/header';
+@import 'blocks/main-nav';
+@import 'blocks/search-form';
 @import 'blocks/subscribe';
