--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import '../../node_modules/bootstrap/scss/bootstrap';
+@import 'jquery.fancybox.scss';
 @import 'helpers/fs';
 @import 'helpers/helpers';
 @import 'helpers/row';
@@ -10,6 +11,7 @@
 @import 'blocks/delivery';
 @import 'blocks/footer';
 @import 'blocks/header';
+@import 'blocks/main-carousel';
 @import 'blocks/main-nav';
 @import 'blocks/search-form';
 @import 'blocks/subscribe';
