--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'blocks/header';
 @import 'blocks/main-carousel';
 @import 'blocks/main-nav';
+@import 'blocks/manufacture';
 @import 'blocks/posts-slider';
 @import 'blocks/search-form';
 @import 'blocks/subscribe';
