--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'blocks/footer';
 @import 'blocks/header';
 @import 'blocks/main-carousel';
+@import 'blocks/main-map';
 @import 'blocks/main-nav';
 @import 'blocks/manufacture';
 @import 'blocks/posts-slider';
