--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,5 +18,6 @@
 @import 'blocks/manufacture';
 @import 'blocks/posts-slider';
 @import 'blocks/search-form';
+@import 'blocks/section-parallax';
 @import 'blocks/subscribe';
 @import 'blocks/why-us';
