--- a/source/sass/blocks/manufacture.scss
+++ b/source/sass/blocks/manufacture.scss
@@ -5,10 +5,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    var(--bg);
+
+  .section-parallax__bg {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url('//liberta.ua/img/main-making.jpg');
+  }
 }
