--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,6 +3,7 @@
     font-size: 14px;
     padding-top: 15px;
     padding-bottom: 15px;
+    border-bottom: 2px solid transparent;
 
     a:not([class]),
     .dropdown-toggle,
@@ -33,11 +34,11 @@
 
     .header__top {
       color: #fff;
+      border-color: rgba(255, 255, 255, 0.1);
     }
 
     .main-nav {
       background-color: transparent;
-      border-color: rgba(255, 255, 255, 0.1);
     }
   }
 }
