--- a/source/sass/blocks/main-map.scss
+++ b/source/sass/blocks/main-map.scss
@@ -11,6 +11,31 @@
   }
 
   .section-parallax__bg {
+    height: 637px;
     background-image: url('//liberta.ua/img/main-map.jpg');
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  .main-map {
+    min-height: 280px;
+
+    .h1 {
+      font-size: 32px;
+    }
+
+    .section-parallax__bg {
+      height: 280px;
+      background-size: cover;
+      background-image: url('//liberta.ua/img/main-map-mobile.jpg');
+    }
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .main-map {
+    .h1 {
+      font-size: 26px;
+    }
   }
 }
