--- a/source/sass/blocks/manufacture.scss
+++ b/source/sass/blocks/manufacture.scss
@@ -7,7 +7,40 @@
   justify-content: center;
 
   .section-parallax__bg {
+    height: 637px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       url('//liberta.ua/img/main-making.jpg');
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  .manufacture {
+    min-height: 280px;
+
+    .h1 {
+      font-size: 32px;
+    }
+
+    .section-parallax__bg {
+      height: 280px;
+      background-size: cover;
+      background-image: url('//liberta.ua/img/main-making-tablet.jpg');
+    }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .manufacture {
+    .section-parallax__bg {
+      background-image: url('//liberta.ua/img/main-making-mobile.jpg');
+    }
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .manufacture {
+    .h1 {
+      font-size: 26px;
+    }
   }
 }
