--- a/source/sass/blocks/section-parallax.scss
+++ b/source/sass/blocks/section-parallax.scss
@@ -5,10 +5,9 @@
   &__bg {
     position: absolute;
     z-index: -1;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    height: 637px;
+    top: 0;
+    left: 0;
+    right: 0;
     background-repeat: no-repeat;
     background-position: 50%;
   }
