Адаптив posts-slider

--- a/source/sass/blocks/main-carousel.scss
+++ b/source/sass/blocks/main-carousel.scss
@@ -309,3 +309,19 @@
     }
   }
 }
+
+@include media-breakpoint-down(xs) {
+  .main-carousel {
+    &__text {
+      padding-right: 48px;
+    }
+
+    .carousel {
+      &-caption {
+        a {
+          font-size: 36px;
+        }
+      }
+    }
+  }
+}
