--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'blocks/delivery';
 @import 'blocks/footer';
 @import 'blocks/header';
+@import 'blocks/headings';
 @import 'blocks/main-carousel';
 @import 'blocks/main-map';
 @import 'blocks/main-nav';
@@ -19,5 +20,6 @@
 @import 'blocks/posts-slider';
 @import 'blocks/search-form';
 @import 'blocks/section-parallax';
+@import 'blocks/slick';
 @import 'blocks/subscribe';
 @import 'blocks/why-us';
