--- a/source/include/footer.html
+++ b/source/include/footer.html
@@ -16,52 +16,54 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="row no-gutters align-items-start d-none d-xl-flex">
-      <div class="col-3 footer__col">
-        <div class="footer__menu-title">Интернет-магазин</div>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="/about-us">О компании</a></li>
-          <li><a href="/blog">Блог</a></li>
-          <li><a href="/showrooms">Адреса шоу-румов</a></li>
-        </ul>
-      </div>
-      <div class="col-3 footer__col">
-        <div class="footer__menu-title">Каталог товаров</div>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="/mirrors">Зеркала</a></li>
-          <li><a href="/showers-cabins">Душевые</a></li>
-          <li><a href="/doors">Межкомнатные двери</a></li>
-          <li><a href="/sliding">Раздвижные системы</a></li>
-        </ul>
-      </div>
-      <div class="col-3 footer__col">
-        <div class="footer__menu-title">Информация для покупателей</div>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="/service-center">Сервисный центр</a></li>
-          <li><a href="/payment-and-delivery">Доставка и оплата</a></li>
-          <li><a href="/garranty-and-return">Гарантия и возврат</a></li>
-        </ul>
-      </div>
-      <div class="col-3 footer__col footer__col--contacts">
-        <div class="footer__menu-title">Есть вопросы?</div>
-        <ul class="footer__phones list-unstyled">
-          <li><a href="tel:+380673265980">+38(067) 326-59-80</a></li>
-          <li><a href="tel:+380501005980">+38(050) 100-59-80</a></li>
-          <li><a href="tel:+380931701347">+38(093) 170-13-47</a></li>
-        </ul>
-        <ul class="footer__menu list-unstyled mb-0">
-          <li><a href="mailto:info@liberta.com.ua">info@liberta.com.ua</a></li>
-          <li><a href="/contacts">Контактная информация</a></li>
-          <li><a href="/mission">Социальная миссия</a></li>
-        </ul>
+    <div class="footer__top d-none d-xl-block">
+      <div class="row no-gutters align-items-start">
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Интернет-магазин</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/about-us">О компании</a></li>
+            <li><a href="/blog">Блог</a></li>
+            <li><a href="/showrooms">Адреса шоу-румов</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Каталог товаров</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/mirrors">Зеркала</a></li>
+            <li><a href="/showers-cabins">Душевые</a></li>
+            <li><a href="/doors">Межкомнатные двери</a></li>
+            <li><a href="/sliding">Раздвижные системы</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col">
+          <div class="footer__menu-title">Информация для покупателей</div>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="/service-center">Сервисный центр</a></li>
+            <li><a href="/payment-and-delivery">Доставка и оплата</a></li>
+            <li><a href="/garranty-and-return">Гарантия и возврат</a></li>
+          </ul>
+        </div>
+        <div class="col-3 footer__col footer__col--contacts">
+          <div class="footer__menu-title">Есть вопросы?</div>
+          <ul class="footer__phones list-unstyled">
+            <li><a href="tel:+380673265980">+38(067) 326-59-80</a></li>
+            <li><a href="tel:+380501005980">+38(050) 100-59-80</a></li>
+            <li><a href="tel:+380931701347">+38(093) 170-13-47</a></li>
+          </ul>
+          <ul class="footer__menu list-unstyled mb-0">
+            <li><a href="mailto:info@liberta.com.ua">info@liberta.com.ua</a></li>
+            <li><a href="/contacts">Контактная информация</a></li>
+            <li><a href="/mission">Социальная миссия</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="footer__bottom">
       <div class="row align-items-center">
-        <div class="col-4">
+        <div class="col-md-4 text-center text-md-left mb-3 mb-md-0">
           <p class="text-muted mb-0">© 2020 Интернет-магазин Liberta</p>
         </div>
-        <div class="col-4">
+        <div class="col-md-4 mb-3 mb-md-0">
           <ul class="footer__social list-unstyled mb-0">
             <li>
               <a href="https://www.facebook.com/Liberta.LED" target="_blank">
@@ -86,7 +88,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-4 text-right">
+        <div class="col-md-4 text-center text-md-right">
           <p class="text-muted mb-0">Создание дизайна - <a rel="nofollow" target="_blank" href="http://www.fresh-d.net/">Fresh Agency</a></p>
         </div>
       </div>
