--- a/source/include/header.html
+++ b/source/include/header.html
@@ -1,8 +1,13 @@
 <div class="header__top">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-5">
+      <div class="col-sm col-auto">
         <div class="row align-items-center">
+          <div class="col-auto d-block d-lg-none">
+            <button type="button" class="btn-unstyled mobile-menu-toggle">
+              <span class="mobile-menu-toggle__icon"></span>
+            </button>
+          </div>
           <div class="col-auto d-none d-lg-block">
             <div class="dropdown">
               <button class="btn-unstyled dropdown-toggle" type="button" id="showrooms" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -26,12 +31,12 @@
           </div>
         </div>
       </div>
-      <div class="col-2 text-center">
+      <div class="col-auto text-center">
         <a href="/">
-          <img src="//liberta.ua/img/svg/logo.svg" alt="Liberta logo">
+          <img class="img-fluid header__logo" src="//liberta.ua/img/svg/logo.svg" alt="Liberta logo">
         </a>
       </div>
-      <div class="col-5">
+      <div class="col">
         <div class="row align-items-center justify-content-end">
           <div class="col-auto d-none d-lg-block">
             <div class="dropdown">
