--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import 'blocks/main-map';
 @import 'blocks/main-nav';
 @import 'blocks/manufacture';
+@import 'blocks/mobile-menu-toggle';
 @import 'blocks/posts-slider';
 @import 'blocks/search-form';
 @import 'blocks/section-parallax';
