--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -6,11 +6,13 @@
 
   &__form-control {
     border-color: transparent;
-    min-width: 300px;
+    width: 300px;
+    max-width: 100%;
   }
 
   &__btn {
-    min-width: 150px;
+    width: 150px;
+    max-width: 100%;
     background-color: $dark;
     border-color: $dark;
   }
