--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'blocks/breadcrumb';
 @import 'blocks/cart-link';
 @import 'blocks/delivery';
+@import 'blocks/dropdown';
 @import 'blocks/footer';
 @import 'blocks/header';
 @import 'blocks/headings';
