--- a/source/include/footer.html
+++ b/source/include/footer.html
@@ -1,12 +1,12 @@
-<div class="subscribe">
+<div class="subscribe text-center">
   <div class="container">
     <form>
       <div class="form-group mb-0 form-row align-items-center justify-content-center">
-        <label for="subscribe" class="col-lg-auto mb-lg-0 text-center">Советы по стилю, новинки и распродажи. Подпишись:</label>
+        <label for="subscribe" class="col-lg-auto mb-lg-0">Советы по стилю, новинки и распродажи. Подпишись:</label>
         <div class="col-sm-auto mb-2 mb-sm-0">
           <input type="email" class="subscribe__form-control form-control" id="subscribe" placeholder="Ваша эл. почта" required>
         </div>
-        <div class="col-sm-auto text-center">
+        <div class="col-sm-auto">
           <button class="subscribe__btn btn btn-secondary">Подписаться</button>
         </div>
       </div>
