--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,9 +1,13 @@
 .header {
   &__top {
+    &-wrapper {
+      min-height: 46px;
+    }
+
     font-size: 14px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border-bottom: 2px solid transparent;
+    padding: 14px 0;
+    top: -46px;
+    transition: top 0.3s;
 
     a:not([class]),
     .dropdown-toggle,
@@ -26,6 +30,14 @@
     }
   }
 
+  &__logo {
+    width: 152px;
+  }
+
+  &__nav-wrpapper {
+    min-height: 40px;
+  }
+
   &--main {
     position: absolute;
     z-index: 2;
@@ -34,7 +46,7 @@
 
     .header__top {
       color: #fff;
-      border-color: rgba(255, 255, 255, 0.1);
+      box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.1);
     }
 
     .main-nav {
@@ -58,10 +70,18 @@
 
 @include media-breakpoint-down(md) {
   .header {
+    &__logo {
+      width: 138px;
+    }
+
+    &__top {
+      padding: 8px 0;
+    }
+
     &.in-top,
     &:not(&--main) {
       .header__top {
-        border-color: $dark;
+        box-shadow: 0 2px 0 0 $dark;
       }
     }
 
@@ -72,8 +92,6 @@
         top: 0;
         left: 0;
         right: 0;
-        padding-top: 10px;
-        padding-bottom: 10px;
         background-color: #fff;
       }
     }
@@ -88,8 +106,12 @@
 
 @include media-breakpoint-down(xs) {
   .header {
-    &__logo {
-      margin: 0 -15px;
+    &__top {
+      &-right {
+        .col-auto {
+          padding: 0 5px;
+        }
+      }
     }
   }
 }
