--- a/source/sass/blocks/search-form.scss
+++ b/source/sass/blocks/search-form.scss
@@ -1,12 +1,5 @@
 .search-form {
   display: flex;
-  width: 24px;
-  overflow: hidden;
-  transition: 0.3s;
-
-  &.show {
-    width: auto;
-  }
 
   &__toggle {
     transition: 0.3s;
@@ -20,7 +13,15 @@
     border: 0;
     border-bottom: 1px solid currentColor;
     padding: 0;
-    margin-left: 12px;
+    background-color: transparent;
+    color: inherit;
+    width: 0;
+    transition: 0.4s;
+
+    &.show {
+      width: 140px;
+      margin-left: 12px;
+    }
 
     &:focus {
       outline: none;
