--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -8,6 +8,8 @@
     border-color: transparent;
     width: 300px;
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__btn {
@@ -15,5 +17,13 @@
     max-width: 100%;
     background-color: $dark;
     border-color: $dark;
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .subscribe {
+    &__form-control {
+      text-align: center;
+    }
   }
 }
