Профиль и выбор языка

--- a/source/include/header.html
+++ b/source/include/header.html
@@ -4,12 +4,12 @@
       <div class="row align-items-center justify-content-between">
         <div class="col-auto col-sm">
           <div class="row align-items-center">
-            <div class="col-auto d-block d-lg-none">
+            <div class="col-auto d-block d-xl-none">
               <button type="button" class="btn-unstyled mobile-menu-toggle">
                 <span class="mobile-menu-toggle__icon"></span>
               </button>
             </div>
-            <div class="col-auto d-none d-lg-block">
+            <div class="col-auto d-none d-xl-block">
               <div class="dropdown">
                 <button class="btn-unstyled dropdown-toggle" type="button" id="showrooms" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <svg class="align-baseline" width="14" height="14" fill="currentColor" aria-hidden="true" focusable="false">
@@ -27,20 +27,20 @@
                 </div>
               </div>
             </div>
-            <div class="col-auto d-none d-lg-block">
+            <div class="col-auto d-none d-xl-block">
               <a href="/service-center">Сервисный центр</a>
             </div>
           </div>
         </div>
         <div class="col-auto text-center">
           <a href="/" class="d-block">
-            <img class="header__logo img-fluid d-none d-lg-block mx-auto" src="//liberta.ua/img/svg/logo.svg" alt="Liberta logo">
-            <img class="header__logo header__logo--m img-fluid d-lg-none" src="//liberta.ua/img/svg/logo_mob.svg" alt="Liberta logo">
+            <img class="header__logo img-fluid d-none d-xl-block mx-auto" src="//liberta.ua/img/svg/logo.svg" alt="Liberta logo">
+            <img class="header__logo header__logo--m img-fluid d-xl-none" src="//liberta.ua/img/svg/logo_mob.svg" alt="Liberta logo">
           </a>
         </div>
         <div class="col-auto col-sm header__top-right">
           <div class="row align-items-center justify-content-end flex-nowrap">
-            <div class="header__phone col-auto d-none d-lg-block">
+            <div class="header__phone col-auto d-none d-xl-block">
               <div class="dropdown">
                 <a class="dropdown-toggle" href="tel:+380673265980" role="button" id="phones" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   +38(067) 326-59-80
@@ -73,13 +73,32 @@
                 <span id="cart-count" class="cart-link__count">1</span>
               </a>
             </div>
+            <div class="col-auto d-none d-xl-block">
+              <a class="profile-link" href="#">
+                <svg width="24" height="24" fill="currentColor" aria-hidden="true" focusable="false">
+                  <use xlink:href="img/sprite.svg#user"></use>
+                </svg>
+              </a>
+            </div>
+            <div class="header__languages col-auto d-none d-xl-block">
+              <div class="dropdown">
+                <a class="dropdown-toggle" href="#" role="button" id="languages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  RU
+                </a>
+                <div class="dropdown-menu dropdown-menu-right fs-14" aria-labelledby="languages">
+                  <a class="dropdown-item" href="#">UA</a>
+                  <a class="dropdown-item" href="#">EN</a>
+                  <a class="dropdown-item" href="#">DE</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="header__nav-wrpapper d-none d-lg-block">
+<div class="header__nav-wrpapper d-none d-xl-block">
   <nav class="main-nav">
     <div class="container">
       <ul class="main-nav__list list-unstyled mb-0">
