--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,11 +6,14 @@
 @import 'helpers/fs';
 @import 'helpers/helpers';
 @import 'helpers/row';
+@import 'blocks/about-intro';
+@import 'blocks/about-products';
 @import 'blocks/advantages-item';
 @import 'blocks/breadcrumb';
 @import 'blocks/cart-link';
 @import 'blocks/delivery';
 @import 'blocks/dropdown';
+@import 'blocks/factory';
 @import 'blocks/footer';
 @import 'blocks/header';
 @import 'blocks/headings';
@@ -19,7 +22,9 @@
 @import 'blocks/main-nav';
 @import 'blocks/manufacture';
 @import 'blocks/mobile-menu-toggle';
+@import 'blocks/objects';
 @import 'blocks/posts-slider';
+@import 'blocks/salons';
 @import 'blocks/search-form';
 @import 'blocks/section-parallax';
 @import 'blocks/slick';
