--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -1,6 +1,7 @@
 $font-family-sans-serif: 'Roboto', 'Helvetica', sans-serif;
 $font-weight-base: 300;
 $body-color: #000;
+$transition-base: 0.3s ease-in-out;
 
 $headings-font-family: 'KievitPro', 'Helvetica', sans-serif;
 $headings-font-weight: 800;
