--- a/source/sass/blocks/breadcrumb.scss
+++ b/source/sass/blocks/breadcrumb.scss
@@ -1,7 +1,7 @@
 .breadcrumb {
   a {
     color: $text-muted;
-    transition: 0.3s;
+    transition: $transition-base;
 
     &:hover {
       color: $secondary;
