--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -20,7 +20,7 @@
 
     a {
       color: inherit;
-      transition: 0.3s;
+      transition: $transition-base;
 
       &:hover {
         color: $text-muted;
@@ -51,7 +51,7 @@
 
     a {
       color: $text-muted;
-      transition: 0.3s;
+      transition: $transition-base;
 
       &:hover {
         color: $primary;
@@ -71,7 +71,7 @@
 
     a {
       color: #fff;
-      transition: 0.3s;
+      transition: $transition-base;
 
       &:hover {
         color: $text-muted;
