--- a/source/sass/blocks/mobile-menu-toggle.scss
+++ b/source/sass/blocks/mobile-menu-toggle.scss
@@ -15,7 +15,7 @@
     width: 24px;
     left: 0;
     background-color: currentColor;
-    transition: 0.3s;
+    transition: $transition-base;
   }
 
   &::before,
