--- a/source/sass/blocks/search-form.scss
+++ b/source/sass/blocks/search-form.scss
@@ -2,7 +2,7 @@
   display: flex;
 
   &__toggle {
-    transition: 0.3s;
+    transition: $transition-base;
 
     &:hover {
       color: $secondary;
