--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,10 +11,12 @@
 @import 'blocks/advantages-item';
 @import 'blocks/breadcrumb';
 @import 'blocks/cart-link';
+@import 'blocks/contacts';
 @import 'blocks/delivery';
 @import 'blocks/dropdown';
 @import 'blocks/factory';
 @import 'blocks/footer';
+@import 'blocks/form-control';
 @import 'blocks/header';
 @import 'blocks/headings';
 @import 'blocks/main-carousel';
@@ -24,9 +26,11 @@
 @import 'blocks/mobile-menu-toggle';
 @import 'blocks/objects';
 @import 'blocks/posts-slider';
+@import 'blocks/requisites';
 @import 'blocks/salons';
 @import 'blocks/search-form';
 @import 'blocks/section-parallax';
+@import 'blocks/shops';
 @import 'blocks/slick';
 @import 'blocks/subscribe';
 @import 'blocks/why-us';
