--- a/source/sass/blocks/search-form.scss
+++ b/source/sass/blocks/search-form.scss
@@ -11,6 +11,7 @@
 
   &__field {
     border: 0;
+    border-radius: 0;
     border-bottom: 1px solid currentColor;
     padding: 0;
     background-color: transparent;
