--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -5,7 +5,7 @@
   font-weight: 500;
 
   &__form-control {
-    border-color: transparent;
+    border-top-color: transparent;
     width: 300px;
     max-width: 100%;
     margin-left: auto;
