--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -7,9 +7,11 @@ $headings-font-family: 'KievitPro', 'Helvetica', sans-serif;
 $headings-font-weight: 800;
 $headings-margin-bottom: 1rem;
 $h1-font-size: 3rem;
+$h5-font-size: 1.125rem;
 
 $primary: #2c8a7b;
-$secondary: #e9416d;
+$red: #e9416d;
+$secondary: $red;
 $pink: #fdecf0;
 $light: #f8f8f8;
 $dark: #1d1d1d;
@@ -24,10 +26,12 @@ $spacers: (
   20p: 20px,
   30p: 30px,
   40p: 40px,
+  50p: 50px,
   60p: 60px,
 );
 
 $font-sizes: (
+  12: 12px,
   14: 14px,
   16: 16px,
 );
@@ -52,18 +56,25 @@ $container-max-widths: (
 );
 
 $border-color: #f0f0f0;
+$border-radius: 5px;
+$border-radius-lg: 20px;
 
 $input-btn-font-size: 0.875rem;
 $input-btn-padding-y: 0.5rem;
 $input-btn-padding-x-sm: 1rem;
 $input-btn-font-size-sm: 0.75rem;
-$input-btn-border-radius: 20px;
 
-$input-border-radius: $input-btn-border-radius;
-$input-border-radius-sm: $input-btn-border-radius;
+$form-feedback-font-size: $input-btn-font-size;
 
-$btn-border-radius: $input-btn-border-radius;
-$btn-border-radius-sm: $input-btn-border-radius;
+$input-bg: #f2f2f2;
+$input-color: $body-color;
+$input-border-color: #d9d9d9;
+$input-border-radius: $border-radius;
+$input-border-radius-sm: $border-radius;
+
+$btn-padding-x: 1.25rem;
+$btn-border-radius: $border-radius-lg;
+$btn-border-radius-sm: $border-radius-lg;
 
 $breadcrumb-font-size: 12px;
 $breadcrumb-padding-y: 1rem;
