--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -31,3 +31,19 @@
     }
   }
 }
+
+@include media-breakpoint-down(sm) {
+  .contacts {
+    &__form {
+      form {
+        display: none;
+      }
+
+      &.expanded {
+        form {
+          display: block;
+        }
+      }
+    }
+  }
+}
