--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'blocks/about-products';
 @import 'blocks/advantages-item';
 @import 'blocks/breadcrumb';
+@import 'blocks/btn-toggle';
 @import 'blocks/cart-link';
 @import 'blocks/contacts';
 @import 'blocks/delivery';
