--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,6 +31,7 @@
 @import 'blocks/salons';
 @import 'blocks/search-form';
 @import 'blocks/section-parallax';
+@import 'blocks/service';
 @import 'blocks/shops';
 @import 'blocks/slick';
 @import 'blocks/subscribe';
