--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'blocks/btn-toggle';
 @import 'blocks/cart-link';
 @import 'blocks/contacts';
+@import 'blocks/custom-control';
 @import 'blocks/delivery';
 @import 'blocks/dropdown';
 @import 'blocks/factory';
