--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/about-intro';
 @import 'blocks/about-products';
 @import 'blocks/advantages-item';
+@import 'blocks/blog-post';
 @import 'blocks/breadcrumb';
 @import 'blocks/btn-toggle';
 @import 'blocks/cart-link';
@@ -27,6 +28,7 @@
 @import 'blocks/manufacture';
 @import 'blocks/mobile-menu-toggle';
 @import 'blocks/objects';
+@import 'blocks/pagination';
 @import 'blocks/posts-slider';
 @import 'blocks/requisites';
 @import 'blocks/salons';
