--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -102,3 +102,10 @@ $dropdown-link-active-color: $secondary;
 
 $custom-control-indicator-size: 1.5rem;
 $custom-control-indicator-border-color: $input-border-color;
+
+$pagination-color: $body-color;
+$pagination-bg: transparent;
+$pagination-border-width: 0;
+$pagination-active-bg: $primary;
+$pagination-hover-color: $secondary;
+$pagination-hover-bg: transparent;
