--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,7 @@
 @import 'blocks/mobile-menu-toggle';
 @import 'blocks/objects';
 @import 'blocks/pagination';
+@import 'blocks/post';
 @import 'blocks/posts-slider';
 @import 'blocks/requisites';
 @import 'blocks/salons';
@@ -39,4 +40,5 @@
 @import 'blocks/shops';
 @import 'blocks/slick';
 @import 'blocks/subscribe';
+@import 'blocks/text';
 @import 'blocks/why-us';
