--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,7 @@
 @import 'blocks/select2';
 @import 'blocks/service';
 @import 'blocks/shops';
+@import 'blocks/showrooms';
 @import 'blocks/slick';
 @import 'blocks/subscribe';
 @import 'blocks/text';
