--- a/source/sass/helpers/helpers.scss
+++ b/source/sass/helpers/helpers.scss
@@ -23,3 +23,32 @@
 strong {
   font-weight: bold;
 }
+
+.gm-style-iw {
+  text-align: center;
+
+  > div {
+    img {
+      display: block;
+      width: auto;
+      height: auto;
+      max-width: 180px;
+    }
+  }
+
+  h6 {
+    margin-top: 5px;
+    margin-bottom: 3px;
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+
+  .get-directions {
+    margin-top: 5px;
+    font-weight: 500;
+    display: block;
+    color: $primary;
+  }
+}
