--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'blocks/breadcrumb';
 @import 'blocks/btn-toggle';
 @import 'blocks/cart-link';
+@import 'blocks/category-map';
 @import 'blocks/contacts';
 @import 'blocks/custom-control';
 @import 'blocks/delivery';
@@ -37,6 +38,7 @@
 @import 'blocks/section-parallax';
 @import 'blocks/select2';
 @import 'blocks/service';
+@import 'blocks/shops-slider';
 @import 'blocks/shops';
 @import 'blocks/showrooms';
 @import 'blocks/slick';
