--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,8 @@
 @import 'blocks/main-map';
 @import 'blocks/main-nav';
 @import 'blocks/manufacture';
+@import 'blocks/mirrors-smart-advantages';
+@import 'blocks/mirrors-smart-intro';
 @import 'blocks/mobile-menu-toggle';
 @import 'blocks/objects';
 @import 'blocks/pagination';
@@ -42,6 +44,7 @@
 @import 'blocks/shops';
 @import 'blocks/showrooms';
 @import 'blocks/slick';
+@import 'blocks/smart-category';
 @import 'blocks/subscribe';
 @import 'blocks/text';
 @import 'blocks/why-us';
