--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,7 @@
 @import 'blocks/pagination';
 @import 'blocks/post';
 @import 'blocks/posts-slider';
+@import 'blocks/product-card';
 @import 'blocks/requisites';
 @import 'blocks/salons';
 @import 'blocks/search-form';
